erDiagram

    USERS {
        UUID user_id PK
        string username
        string fullname
        string email
        string pass_hash
        datetime created_at
        boolean is_active
        string avatar
        string avatar_bg
        datetime last_session "nullable"
        datetime deleted_at "nullable"
        UUID deleted_by "nullable"
    }

    TASKS {
        UUID task_id PK
        string title
        string description
        string status
        string priority
        boolean is_active
        datetime created_at
        datetime due_at
        datetime deleted_at "nullable"
        UUID deleted_by "nullable"
    }

    ROLES {
        UUID role_id PK
        string name
        string description
        datetime created_at
        datetime deleted_at "nullable"
        UUID deleted_by "nullable"
        boolean is_active
    }

    PERMISSIONS {
        UUID permission_id PK
        string name
        string description
        datetime created_at
        datetime deleted_at "nullable"
        UUID deleted_by "nullable"
        boolean is_active
    }

    AUDIT_LOGS {
        UUID log_id PK
        UUID user_id FK
        string action
        string entity_name
        UUID entity_id
        datetime timestamp
        text old_values
        text new_values
        datetime created_at
        datetime deleted_at "nullable"
        UUID deleted_by "nullable"
    }

    USER_ROLES {
        UUID id PK
        UUID user_id FK
        UUID role_id FK
    }

    ROLE_PERMISSIONS {
        UUID id PK
        UUID role_id FK
        UUID permission_id FK
    }

    USER_PERMISSIONS {
        UUID id PK
        UUID user_id FK
        UUID permission_id FK
    }

    TASK_ASSIGNMENT {
        UUID id PK
        UUID user_id FK
        UUID task_id FK
        datetime assigned_at
        string assignment_role
    }

    USERS ||--o{ USER_ROLES : has
    ROLES ||--o{ USER_ROLES : assigned_to

    ROLES ||--o{ ROLE_PERMISSIONS : grants
    PERMISSIONS ||--o{ ROLE_PERMISSIONS : included_in

    USERS ||--o{ USER_PERMISSIONS : receives
    PERMISSIONS ||--o{ USER_PERMISSIONS : assigned

    USERS ||--o{ TASK_ASSIGNMENT : participates
    TASKS ||--o{ TASK_ASSIGNMENT : contains

    USERS ||--o{ AUDIT_LOGS : generates